test/should_pass/basic_050.grg
actions basic_050 using basic_model_001;

rule r {
	pattern {
		x : A;
		y : B;
		z : C;
	}
	replace {
	}
}

