test/should_fail/inh_attrib_014.grg
actions inh_attrib_014 using inh_attrib_model_014;

rule r {
	pattern {
	}
	replace {
	}
}

